# aws-costs-tui

./: Cargo.toml  README.md
src/: main.rs
src/aws/: cost_explorer.rs  credentials.rs  mod.rs
src/ui/: app.rs  mod.rs
