[package]
name = "aws-costs-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for viewing AWS Cost Explorer data with charts"
license = "MIT"
authors = ["Ajay"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# AWS (lightweight - SigV4 only, no SDK bloat)
aws-sigv4 = "1.2"
aws-credential-types = "1.2"
aws-smithy-runtime-api = "1.2"

# HTTP client (using rustls to avoid OpenSSL cross-compilation issues)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[[bin]]
name = "aws-costs"
path = "src/main.rs"
